--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             
                 <!--First Tier Drop Down-->
                 <ul>
-                    <li><a href="./lab1no1.html">Lab1no1</a></li>
-                    <li><a href="./lab1no2.html">Lab1no2</a></li>
-                    <li><a href="./lab1no3.html">Lab1no3</a></li>
-                    <li><a href="./lab1no4.html">lab1no4</a></li>
+                    <li><a href="./lab1/lab1no1.html">Lab1no1</a></li>
+                    <li><a href="./lab1/lab1no2.html">Lab1no2</a></li>
+                    <li><a href="./lab1/lab1no3.html">Lab1no3</a></li>
+                    <li><a href="./lab1/lab1no4.html">lab1no4</a></li>
                 </ul>
             
             </li>
